--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                     <span onclick="togglePassword(this)">show</span>
                 </div>
 
-                <label>
+                <label class="pointer">
                     <input type="checkbox" />
                     I agree with <a href="#">Terms & Conditions</a>
                 </label>
 
-                <input type="submit" value="Sign Up" />
+                <input type="submit" value="Sign Up" class="pointer" />
             </form>
 
             <a href="#">Log In</a>
