--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 
             <form class="column-container" onsubmit="handelFormSubmit()">
                 
-                <select>
-                    <option value="1">Estonia</option>
-                    <option value="2">Estonia</option>
-                </select>
+                <div class="material-select">
+                    <select>
+                        <option value="1">Estonia</option>
+                        <option value="2">Estonia</option>
+                    </select>
+                    <label>Country of residence</label>
+                </div>
 
                 <div class="material-textfield">
                     <input type='email' placeholder=" " oninput="handleEmailInput(this)" />
