--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>DevTailor - HTML Task - Bahaa Alsharif</title>
     <script defer src="assets/scripts/index.js"></script>
     <link rel="stylesheet" href="assets/styles/index.css" media="all">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
 </head>
 
 <body>
@@ -32,13 +34,13 @@
                 <div class="material-textfield vertical-margin">
                     <input id="password1" type="password" placeholder=" " oninput="handlePassword()" />
                     <label>Created your password</label>
-                    <span onclick="togglePassword(this)">show</span>
+                    <span class="material-icons-outlined" onclick="togglePassword(this)">visibility</span>
                 </div>
 
                 <div class="material-textfield vertical-margin">
                     <input id="password2" type="password" placeholder=" " oninput="handlePassword()" />
                     <label>Re-enter password</label>
-                    <span onclick="togglePassword(this)">show</span>
+                    <span class="material-icons-outlined" onclick="togglePassword(this)">visibility</span>
                 </div>
 
                 <label class="pointer vertical-margin">
@@ -49,12 +51,12 @@
                 <input type="submit" value="Sign Up" class="pointer" />
             </form>
 
-            <div class="login-label vertical-margin bold">
+            <div class="login-label vertical-margin bold small-font">
                 <a href="#">Log In</a>
             </div>
         </div>
         <div>
-            <a href="#">Customer support</a>
+            <a class="small-font" href="#">Customer support</a>
         </div>
     </div>
 </body>
