--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>DevTailor - HTML Task - Bahaa Alsharif</title>
+    <title>DevTailor HTML Task - Bahaa Alsharif</title>
     <script defer src="assets/scripts/index.js"></script>
     <link rel="stylesheet" href="assets/styles/index.css" media="all">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
@@ -24,6 +24,7 @@
                         <option value="2">Other Country</option>
                     </select>
                     <label>Country of residence</label>
+                    <span class="material-icons-outlined">expand_more</span>
                 </div>
 
                 <div class="material-textfield vertical-margin">
@@ -32,13 +33,13 @@
                 </div>
 
                 <div class="material-textfield vertical-margin">
-                    <input id="password1" type="password" placeholder=" " oninput="handlePassword()" />
+                    <input id="password1" type="password" placeholder=" " oninput="handlePasswordInput()" />
                     <label>Created your password</label>
                     <span class="material-icons-outlined" onclick="togglePassword(this)">visibility</span>
                 </div>
 
                 <div class="material-textfield vertical-margin">
-                    <input id="password2" type="password" placeholder=" " oninput="handlePassword()" />
+                    <input id="password2" type="password" placeholder=" " oninput="handlePasswordInput()" />
                     <label>Re-enter password</label>
                     <span class="material-icons-outlined" onclick="togglePassword(this)">visibility</span>
                 </div>
@@ -51,13 +52,9 @@
                 <input type="submit" value="Sign Up" class="pointer" />
             </form>
 
-            <div class="login-label vertical-margin bold small-font">
-                <a href="#">Log In</a>
-            </div>
+            <a href="#" class="login-label vertical-margin bold small-font">Log In</a>
         </div>
-        <div>
-            <a class="small-font" href="#">Customer support</a>
-        </div>
+        <a class="small-font" href="#">Customer support</a>
     </div>
 </body>
 
