--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
             <a href="#" class="login-label vertical-margin bold small-font">Log In</a>
         </div>
         <a class="small-font" href="#">Customer support</a>
+
+        <span class="blur-effect-green blur-top"></span>
+        <span class="blur-effect-green blur-top-left"></span>
+        <span class="blur-effect-green blur-bottom-right"></span>
+        <span class="blur-effect-blue blur-bottom-right-2"></span>
+        <span class="blur-effect-blue blur-top-left-2"></span>
     </div>
 </body>
 
