--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <form class="column-container" onsubmit="return handelFormSubmit(event)">
                 
                 <div class="material-select vertical-margin">
-                    <selectp aria-label="Countries">
+                    <select aria-label="Countries">
                         <option value="1">Estonia</option>
                         <option value="2">Other Country</option>
                     </select>
